productcard fix in producenter and importor,canonical fix in ordlista and regioner,layout shift in category page,added decimal to ordered list

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -280,7 +280,7 @@ body {
 
 .content ol.wp-block-list {
   margin: 15px 0;
-  list-style-type: none;
+  list-style-type: decimal;
   counter-reset: item;
 }
 
